@@ -3,7 +3,11 @@
 {
     cat("\nCall:\n")
     cat(deparse(x$call), "\n\n")
-    cat("Nonmetric Multidimensional Scaling using isoMDS (MASS package)\n\n")
+    cat("Nonmetric Multidimensional Scaling using ")
+    if (x$engine == "monoMDS")
+        cat("monoMDS\n\n")
+    else if (x$engine == "isoMDS")
+        cat("isoMDS (MASS package)\n\n")
     cat("Data:    ", x$data, "\n")
     cat("Distance:", x$distance, "\n\n")
     cat("Dimensions:", x$dims, "\n")
